# csttool

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  TODO.md  atlas_bundling_plan.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  report_mockup.html  reproducibility_testing_plan.md  requirements.txt
.dev/: DATA_VALIDATION.md  DOCUMENTATION_IMPLEMENTATION_OUTLINE.md  TODO.md
.dev/fixes/: stanford_hardi_negative_control.md
.github/workflows/: docs.yaml
.spyproject/config/: workspace.ini
DOCUMENTATION_CHECKLIST/: index.html
contributing/architecture/: index.html
contributing/code-style/: index.html
contributing/contributing/: index.html
contributing/development-setup/: index.html
diagrams/drawio/: extraction.drawio  metrics.drawio  preprocessing.drawio  tracking.drawio
diagrams/mermaid/: batch.mmd  check.mmd  check_dataset.mmd  extraction.mmd  import_cmd.mmd  metrics.mmd  pipeline_overview.mmd  preprocess.mmd  run.mmd  tracking.mmd  validate.mmd
docs/: DOCUMENTATION_CHECKLIST.md  gradient_extension_fix.md  index.md  recommended_datasets.md
docs/contributing/: architecture.md  code-style.md  contributing.md  development-setup.md
docs/explanation/: cst-anatomy.md  design-decisions.md  diffusion-mri.md  explanation.md  limitations.md  references.md  tractography.md
docs/fixes/: bidirectional_seeding.md  roi_asymmetry_fix_plan.md  roi_asymmetry_fix_plan_2.md  roi_asymmetry_investigation.md  roi_asymmetry_investigation_2.md  roi_asymmetry_investigation_3.md  roi_asymmetry_investigation_4.md
docs/getting-started/: data-requirements.md  installation.md  quickstart.md
docs/how-to/: data-formats.md  how-to.md  multiple-subjects.md  troubleshooting.md
docs/plans/: validation_feature_plan.md  (+2 more)
reports/: bvec_diff_report.md
scripts/: compare_outputs.py  determinism_report.py  generate_validation_report.py  plot_validation_summary.py  run_determinism_test.sh
search/: search_index.json
tests/: cli_test.sh  conftest.py  test.py  test_cli.py  test_data_loader.py  test_import_data.py  test_tracking.py
thesis/: .latexmkrc  Makefile  main.tex  references.bib
validation_output/: validation_report.json
(+213 files in other folders)
