[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "csttool"
version = "0.0.1"
description = "Simple, modular CST assessment tool (DW-MRI), WIP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alem Nalo" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "cython",
    "dipy",
    "matplotlib",
    "nibabel",
    "dicom2nifti",
    "nilearn",
    reportlab
]

[project.scripts]
csttool = "csttool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csttool"]
