[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "csttool"
dynamic = ["version"]
description = "Simple, modular CST assessment tool (DW-MRI)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alem Nalo" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "cython",
    "dipy",
    "matplotlib",
    "nibabel",
    "dicom2nifti",
    "nilearn",
    "weasyprint",
    "jinja2",
    "tomllib"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions"
]

[project.scripts]
csttool = "csttool.cli:main"

[tool.hatch.version]
path = "src/csttool/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/csttool"]
